2010-05-07	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/pfcmd/report.pm: Fixed a couple of non-working reports. 
	Fixes #984;
	Added test cases for all of pf::pfcmd::report's subs.
	Added Test::NoWarnings as a build dependency.
	http://www.packetfence.org/bugs/view.php?id=984

2010-05-06	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Removing the pinned perl(Parse::RecDescent) 
	version from the RPM spec. Fixes #833;
	http://www.packetfence.org/bugs/view.php?id=833

	* pf/packetfence.spec: Changes to RPM spec file
	- Snapshot vs releases is now defined by an rpmbuild argument
	- source_release should now be passed as an argument to simplify our 
	nightly build system. Fixes #946;
	http://www.packetfence.org/bugs/view.php?id=946

	* pf/packetfence.spec: Fixed a problem with addons/integration-testing
	files in the RPM spec file

	* pf/packetfence.spec: Perl required version is now 5.8.8 since a lot 
	of our source files explictly ask for 5.8.8. Fixes #868;
	http://www.packetfence.org/bugs/view.php?id=868

	* pf/packetfence.spec: perl modules required for testing are now build
	dependencies instead of runtime dependencies. Fixes #866;
	http://www.packetfence.org/bugs/view.php?id=866

2010-05-05	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/installer.pl: The installer now refers to the UPGRADE document
	instead of trying to upgrade the database. Fixes #869;
	http://www.packetfence.org/bugs/view.php?id=869

	* pf/sbin/pfsetvlan, pf/t/all.t, pf/t/pfsetvlan.t: Now parsing new
	Net-SNMP 5.4 traplog format. Fixes #940;
	Took the opportunity to do it cleanly with a compiled and re-used regexp
	that is full of comments.
	Now testing the various traplog format in t/pfsetvlan.t.
	Thanks to Maikel for the report and regexp draft.

	* pf/conf/dhcp_fingerprints.conf: Re-labeled some devices to avoid 
	problems with VoIP autodetection. Fixes #896;
	http://www.packetfence.org/bugs/view.php?id=896
